fix out attrs bug

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1192,6 +1192,290 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted = {\n",
+    "        \"db_id\": \"customer\",\n",
+    "        \"query\": \"SELECT count(*) FROM customer\",\n",
+    "        \"query_toks\": [\n",
+    "            \"SELECT\",\n",
+    "            \"count\",\n",
+    "            \"(\",\n",
+    "            \"*\",\n",
+    "            \")\",\n",
+    "            \"FROM\",\n",
+    "            \"customer\"\n",
+    "        ],\n",
+    "        \"query_toks_no_value\": [\n",
+    "            \"select\",\n",
+    "            \"count\",\n",
+    "            \"(\",\n",
+    "            \"*\",\n",
+    "            \")\",\n",
+    "            \"from\",\n",
+    "            \"customer\"\n",
+    "        ],\n",
+    "        \"question\": \"How many customers do we have?\",\n",
+    "        \"question_toks\": [\n",
+    "            \"How\",\n",
+    "            \"many\",\n",
+    "            \"customers\",\n",
+    "            \"do\",\n",
+    "            \"we\",\n",
+    "            \"have\",\n",
+    "            \"?\"\n",
+    "        ],\n",
+    "        \"sql\": {\n",
+    "            \"except\": None,\n",
+    "            \"from\": {\n",
+    "                \"conds\": [],\n",
+    "                \"table_units\": [\n",
+    "                    [\n",
+    "                        \"table_unit\",\n",
+    "                        0\n",
+    "                    ]\n",
+    "                ]\n",
+    "            },\n",
+    "            \"groupBy\": [],\n",
+    "            \"having\": [],\n",
+    "            \"intersect\": None,\n",
+    "            \"limit\": None,\n",
+    "            \"orderBy\": [],\n",
+    "            \"select\": [\n",
+    "                False,\n",
+    "                [\n",
+    "                    [\n",
+    "                        3,\n",
+    "                        [\n",
+    "                            0,\n",
+    "                            [\n",
+    "                                0,\n",
+    "                                0,\n",
+    "                                False\n",
+    "                            ],\n",
+    "                            None\n",
+    "                        ]\n",
+    "                    ]\n",
+    "                ]\n",
+    "            ],\n",
+    "            \"union\": None,\n",
+    "            \"where\": []\n",
+    "        }\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = {\n",
+    "        \"column_names\": [\n",
+    "            [\n",
+    "                -1,\n",
+    "                \"*\"\n",
+    "            ],\n",
+    "            [\n",
+    "                0,\n",
+    "                \"customer_Id\"\n",
+    "            ],\n",
+    "            [\n",
+    "                0,\n",
+    "                \"name\"\n",
+    "            ],\n",
+    "            [\n",
+    "                0,\n",
+    "                \"address\"\n",
+    "            ],\n",
+    "            [\n",
+    "                0,\n",
+    "                \"birthday\"\n",
+    "            ],\n",
+    "            [\n",
+    "                0,\n",
+    "                \"phone\"\n",
+    "            ],\n",
+    "            [\n",
+    "                0,\n",
+    "                \"city\"\n",
+    "            ]\n",
+    "        ],\n",
+    "        \"column_names_original\": [\n",
+    "            [\n",
+    "                -1,\n",
+    "                \"*\"\n",
+    "            ],\n",
+    "            [\n",
+    "                0,\n",
+    "                \"customer_ID\"\n",
+    "            ],\n",
+    "            [\n",
+    "                0,\n",
+    "                \"name\"\n",
+    "            ],\n",
+    "            [\n",
+    "                0,\n",
+    "                \"address\"\n",
+    "            ],\n",
+    "            [\n",
+    "                0,\n",
+    "                \"birthday\"\n",
+    "            ],\n",
+    "            [\n",
+    "                0,\n",
+    "                \"phone\"\n",
+    "            ],\n",
+    "            [\n",
+    "                0,\n",
+    "                \"city\"\n",
+    "            ]\n",
+    "        ],\n",
+    "        \"column_types\": [\n",
+    "            \"text\",\n",
+    "            \"number\",\n",
+    "            \"text\",\n",
+    "            \"text\",\n",
+    "            \"text\",\n",
+    "            \"number\",\n",
+    "            \"text\"\n",
+    "        ],\n",
+    "        \"db_id\": \"customer\",\n",
+    "        \"foreign_keys\": [ ],\n",
+    "        \"primary_keys\": [\n",
+    "            1\n",
+    "        ],\n",
+    "        \"table_names\": [\n",
+    "            \"customer\"\n",
+    "        ],\n",
+    "        \"table_names_original\": [\n",
+    "            \"customer\"\n",
+    "        ]\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _get_out_attributes(predicted_lf, table_data):\n",
+    "    out_attrs = []\n",
+    "    for agg_and_value in predicted_lf['sql']['select'][1]:\n",
+    "        agg_id = agg_and_value[0]\n",
+    "        if agg_id != 0:\n",
+    "            import ipdb; ipdb.set_trace()\n",
+    "            out_attrs.append(None)\n",
+    "            continue\n",
+    "        value = agg_and_value[1]\n",
+    "        unit_op = value[0]\n",
+    "        if unit_op != 0:\n",
+    "            import ipdb; ipdb.set_trace()\n",
+    "            out_attrs.append(None)\n",
+    "            continue\n",
+    "        for col in (value[1], value[2]):\n",
+    "            if not col:\n",
+    "                continue\n",
+    "            agg_id = col[0]\n",
+    "            if agg_id != 0:\n",
+    "                import ipdb; ipdb.set_trace()\n",
+    "                out_attrs.append(None)\n",
+    "                break\n",
+    "            cold_id = col[1]\n",
+    "            out_attrs.append(table_data['column_keys'][cold_id][1])\n",
+    "    return out_attrs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> \u001b[0;32m<ipython-input-10-2f165e409476>\u001b[0m(7)\u001b[0;36m_get_out_attributes\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m      6 \u001b[0;31m            \u001b[0;32mimport\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m----> 7 \u001b[0;31m            \u001b[0mout_attrs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m      8 \u001b[0;31m            \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
+      "ipdb> l\n",
+      "\u001b[1;32m      2 \u001b[0m    \u001b[0mout_attrs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m      3 \u001b[0m    \u001b[0;32mfor\u001b[0m \u001b[0magg_and_value\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpredicted_lf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'sql'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'select'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m      4 \u001b[0m        \u001b[0magg_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magg_and_value\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m      5 \u001b[0m        \u001b[0;32mif\u001b[0m \u001b[0magg_id\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m      6 \u001b[0m            \u001b[0;32mimport\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m----> 7 \u001b[0;31m            \u001b[0mout_attrs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[1;32m      8 \u001b[0m            \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m      9 \u001b[0m        \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magg_and_value\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m     10 \u001b[0m        \u001b[0munit_op\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m     11 \u001b[0m        \u001b[0;32mif\u001b[0m \u001b[0munit_op\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m     12 \u001b[0m            \u001b[0;32mimport\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\n",
+      "ipdb> agg_id\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "_get_out_attributes(predicted, table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
