try to fix out attrs

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,11 +1248,13 @@
     "            \"from\",\n",
     "            \"customer\"\n",
     "        ],\n",
-    "        \"question\": \"How many customers do we have?\",\n",
+    "        \"question\": \"How many customers named John do we have?\",\n",
     "        \"question_toks\": [\n",
-    "            \"How\",\n",
+    "            \"how\",\n",
     "            \"many\",\n",
-    "            \"customers\",\n",
+    "            \"customer\",\n",
+    "            \"named\",\n",
+    "            \"john\",\n",
     "            \"do\",\n",
     "            \"we\",\n",
     "            \"have\",\n",
@@ -1269,11 +1271,11 @@
     "                    ]\n",
     "                ]\n",
     "            },\n",
-    "            \"groupBy\": [],\n",
+    "            \"groupby\": [],\n",
     "            \"having\": [],\n",
     "            \"intersect\": None,\n",
     "            \"limit\": None,\n",
-    "            \"orderBy\": [],\n",
+    "            \"orderby\": [],\n",
     "            \"select\": [\n",
     "                False,\n",
     "                [\n",
@@ -1293,13 +1295,156 @@
     "            ],\n",
     "            \"union\": None,\n",
     "            \"where\": []\n",
-    "        }\n",
+    "        },\n",
+    "        \"names\": [\n",
+    "            \"*\",\n",
+    "            \"customer_Id\",\n",
+    "            \"name\",\n",
+    "            \"address\",\n",
+    "            \"birthday\",\n",
+    "            \"phone\",\n",
+    "            \"city\"\n",
+    "        ],\n",
+    "        \"table_names\": [\n",
+    "            \"customer\"\n",
+    "        ],\n",
+    "        \"col_set\": [\n",
+    "            \"*\",\n",
+    "            \"customer_Id\",\n",
+    "            \"name\",\n",
+    "            \"address\",\n",
+    "            \"birthday\",\n",
+    "            \"phone\",\n",
+    "            \"city\"\n",
+    "        ],\n",
+    "        \"col_table\": [\n",
+    "            -1,\n",
+    "            0,\n",
+    "            0,\n",
+    "            0,\n",
+    "            0,\n",
+    "            0,\n",
+    "            0\n",
+    "        ],\n",
+    "        \"keys\": {\n",
+    "            \"1\": 1\n",
+    "        },\n",
+    "        \"origin_question_toks\": [\n",
+    "            \"How\",\n",
+    "            \"many\",\n",
+    "            \"customers\",\n",
+    "            \"named\",\n",
+    "            \"John\",\n",
+    "            \"do\",\n",
+    "            \"we\",\n",
+    "            \"have\",\n",
+    "            \"?\"\n",
+    "        ],\n",
+    "        \"question_arg\": [\n",
+    "            [\n",
+    "                \"how\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"many\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"customer\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"named\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"john\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"do\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"we\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"have\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"?\"\n",
+    "            ]\n",
+    "        ],\n",
+    "        \"question_arg_type\": [\n",
+    "            [\n",
+    "                \"NONE\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"NONE\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"table\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"NONE\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"NONE\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"NONE\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"NONE\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"NONE\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"NONE\"\n",
+    "            ]\n",
+    "        ],\n",
+    "        \"nltk_pos\": [\n",
+    "            [\n",
+    "                \"how\",\n",
+    "                \"WRB\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"many\",\n",
+    "                \"JJ\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"customer\",\n",
+    "                \"NN\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"named\",\n",
+    "                \"VBN\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"john\",\n",
+    "                \"NN\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"do\",\n",
+    "                \"VBP\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"we\",\n",
+    "                \"PRP\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"have\",\n",
+    "                \"VB\"\n",
+    "            ],\n",
+    "            [\n",
+    "                \"?\",\n",
+    "                \".\"\n",
+    "            ]\n",
+    "        ],\n",
+    "        \"rule_label\": \"Root1(3) Root(5) Sel(0) N(0) A(3) C(0) T(0)\",\n",
+    "        \"sketch_result\": \"Root1(3) Root(3) Sel(0) N(0) Filter(2)\",\n",
+    "        \"model_result\": \"Root1(3) Root(3) Sel(0) N(0) A(3) C(0) T(0) Filter(2) A(0) C(2) T(0)\"\n",
     "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1396,6 +1541,221 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/joaonadkarni/miniconda3/envs/nl2sql/lib/python3.6/site-packages/scipy/__init__.py:143: UserWarning: NumPy 1.14.5 or above is required for this version of SciPy (detected version 1.14.0)\n",
+      "  UserWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.rule.sem_utils import alter_column0, alter_inter, alter_not_in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schemas = dict()\n",
+    "schemas[table['db_id']] = table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'customer': {'column_names': [[-1, '*'],\n",
+       "   [0, 'customer_Id'],\n",
+       "   [0, 'name'],\n",
+       "   [0, 'address'],\n",
+       "   [0, 'birthday'],\n",
+       "   [0, 'phone'],\n",
+       "   [0, 'city']],\n",
+       "  'column_names_original': [[-1, '*'],\n",
+       "   [0, 'customer_ID'],\n",
+       "   [0, 'name'],\n",
+       "   [0, 'address'],\n",
+       "   [0, 'birthday'],\n",
+       "   [0, 'phone'],\n",
+       "   [0, 'city']],\n",
+       "  'column_types': ['text', 'number', 'text', 'text', 'text', 'number', 'text'],\n",
+       "  'db_id': 'customer',\n",
+       "  'foreign_keys': [],\n",
+       "  'primary_keys': [1],\n",
+       "  'table_names': ['customer'],\n",
+       "  'table_names_original': ['customer']}}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "schemas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alter_not_in([predicted], schemas=schemas)\n",
+    "alter_inter([predicted])\n",
+    "alter_column0([predicted])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'db_id': 'customer',\n",
+       " 'query': 'SELECT count(*) FROM customer',\n",
+       " 'query_toks': ['SELECT', 'count', '(', '*', ')', 'FROM', 'customer'],\n",
+       " 'query_toks_no_value': ['select', 'count', '(', '*', ')', 'from', 'customer'],\n",
+       " 'question': 'How many customers named John do we have?',\n",
+       " 'question_toks': ['how',\n",
+       "  'many',\n",
+       "  'customer',\n",
+       "  'named',\n",
+       "  'john',\n",
+       "  'do',\n",
+       "  'we',\n",
+       "  'have',\n",
+       "  '?'],\n",
+       " 'sql': {'except': None,\n",
+       "  'from': {'conds': [], 'table_units': [['table_unit', 0]]},\n",
+       "  'groupby': [],\n",
+       "  'having': [],\n",
+       "  'intersect': None,\n",
+       "  'limit': None,\n",
+       "  'orderby': [],\n",
+       "  'select': [False, [[3, [0, [0, 0, False], None]]]],\n",
+       "  'union': None,\n",
+       "  'where': []},\n",
+       " 'names': ['*', 'customer_Id', 'name', 'address', 'birthday', 'phone', 'city'],\n",
+       " 'table_names': ['customer'],\n",
+       " 'col_set': ['*',\n",
+       "  'customer_Id',\n",
+       "  'name',\n",
+       "  'address',\n",
+       "  'birthday',\n",
+       "  'phone',\n",
+       "  'city'],\n",
+       " 'col_table': [-1, 0, 0, 0, 0, 0, 0],\n",
+       " 'keys': {'1': 1},\n",
+       " 'origin_question_toks': ['How',\n",
+       "  'many',\n",
+       "  'customers',\n",
+       "  'named',\n",
+       "  'John',\n",
+       "  'do',\n",
+       "  'we',\n",
+       "  'have',\n",
+       "  '?'],\n",
+       " 'question_arg': [['how'],\n",
+       "  ['many'],\n",
+       "  ['customer'],\n",
+       "  ['named'],\n",
+       "  ['john'],\n",
+       "  ['do'],\n",
+       "  ['we'],\n",
+       "  ['have'],\n",
+       "  ['?']],\n",
+       " 'question_arg_type': [['NONE'],\n",
+       "  ['NONE'],\n",
+       "  ['table'],\n",
+       "  ['NONE'],\n",
+       "  ['NONE'],\n",
+       "  ['NONE'],\n",
+       "  ['NONE'],\n",
+       "  ['NONE'],\n",
+       "  ['NONE']],\n",
+       " 'nltk_pos': [['how', 'WRB'],\n",
+       "  ['many', 'JJ'],\n",
+       "  ['customer', 'NN'],\n",
+       "  ['named', 'VBN'],\n",
+       "  ['john', 'NN'],\n",
+       "  ['do', 'VBP'],\n",
+       "  ['we', 'PRP'],\n",
+       "  ['have', 'VB'],\n",
+       "  ['?', '.']],\n",
+       " 'rule_label': 'Root1(3) Root(5) Sel(0) N(0) A(3) C(0) T(0)',\n",
+       " 'sketch_result': 'Root1(3) Root(3) Sel(0) N(0) Filter(2)',\n",
+       " 'model_result': 'Root1(3) Root(3) Sel(0) N(0) A(3) C(0) T(0) Filter(2) A(0) C(2) T(0)',\n",
+       " 'rule_count': 0,\n",
+       " 'model_result_replace': 'Root1(3) Root(3) Sel(0) N(0) A(3) C(0) T(0) Filter(2) A(0) C(2) T(0)'}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predicted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1436,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1462,7 +1822,23 @@
       "\u001b[1;32m     12 \u001b[0m            \u001b[0;32mimport\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\n",
       "ipdb> agg_id\n",
-      "3\n"
+      "3\n",
+      "ipdb> q\n"
+     ]
+    },
+    {
+     "ename": "BdbQuit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mBdbQuit\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-e5d6d9f1e732>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0m_get_out_attributes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredicted\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtable\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-10-2f165e409476>\u001b[0m in \u001b[0;36m_get_out_attributes\u001b[0;34m(predicted_lf, table_data)\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0magg_id\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m             \u001b[0;32mimport\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m             \u001b[0mout_attrs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m             \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magg_and_value\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-10-2f165e409476>\u001b[0m in \u001b[0;36m_get_out_attributes\u001b[0;34m(predicted_lf, table_data)\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0magg_id\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m             \u001b[0;32mimport\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m             \u001b[0mout_attrs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m             \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magg_and_value\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/nl2sql/lib/python3.6/bdb.py\u001b[0m in \u001b[0;36mtrace_dispatch\u001b[0;34m(self, frame, event, arg)\u001b[0m\n\u001b[1;32m     49\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;31m# None\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'line'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'call'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/nl2sql/lib/python3.6/bdb.py\u001b[0m in \u001b[0;36mdispatch_line\u001b[0;34m(self, frame)\u001b[0m\n\u001b[1;32m     68\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstop_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbreak_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muser_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquitting\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mraise\u001b[0m \u001b[0mBdbQuit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrace_dispatch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mBdbQuit\u001b[0m: "
      ]
     }
    ],
